--- a/Datablast_Data_Engineer_Interview_–_Technical_Test_Question_1.ipynb
+++ b/Datablast_Data_Engineer_Interview_–_Technical_Test_Question_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAQ9NyMis0ZVyL8pFNVOUa",
+      "authorship_tag": "ABX9TyOicY0ElUtXYSYpSfQp5FnB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
         "id": "YZqeqI4Z7jkB",
         "outputId": "32261522-7751-4b87-bcfd-1fd115f3b6e7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,23 +71,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GFIcgQGN7XPo",
-        "outputId": "953975bb-51b0-4904-b25d-d155a30b152d"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Currency rates have been fetched and saved to currency_rates_2021-01-01_to_2021-01-10.csv.\n"
-          ]
-        }
-      ],
       "source": [
         "import csv\n",
         "from datetime import datetime, timedelta\n",
@@ -104,14 +87,17 @@
         "    current_date = start_date\n",
         "    while current_date <= end_date:\n",
         "        rates = c.get_rates('USD', current_date)\n",
-        "        results.append({'Date': current_date.strftime('%Y-%m-%d'), **rates})\n",
+        "        for currency, value in rates.items():\n",
+        "            results.append({'Date': current_date.strftime('%Y-%m-%d'), 'Name': currency, 'Value': value})\n",
         "        current_date += timedelta(days=1)\n",
         "\n",
         "    return results\n",
         "\n",
         "# Function to write results to a CSV file\n",
         "def write_to_csv(results, filename):\n",
-        "    fieldnames = ['Date', 'USD'] + list(results[0].keys())[1:]  # Ensure 'USD' is the first column\n",
+        "    # Ensure 'Date', 'Name', 'Value' is the order of columns\n",
+        "    fieldnames = ['Date', 'Name', 'Value']\n",
+        "\n",
         "    with open(filename, 'w', newline='') as csvfile:\n",
         "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
         "        writer.writeheader()\n",
@@ -126,11 +112,27 @@
         "    results = fetch_currency_rates(start_date, end_date)\n",
         "\n",
         "    # Write results to a CSV file\n",
-        "    csv_filename = 'currency_rates_2021-01-01_to_2021-01-10.csv'\n",
+        "    csv_filename = 'currency_rates_2021-01-01_to_2021-01-10_.csv'\n",
         "    write_to_csv(results, csv_filename)\n",
         "\n",
-        "    print(f\"Currency rates have been fetched and saved to {csv_filename}.\")\n",
-        "\n"
+        "    print(f\"Currency rates have been fetched and saved to {csv_filename}.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YyLFYls-MuvJ",
+        "outputId": "7015b855-8c21-42d6-f700-982777222e5e"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Currency rates have been fetched and saved to currency_rates_2021-01-01_to_2021-01-10_.csv.\n"
+          ]
+        }
       ]
     }
   ]
